# swop

./: .gitignore  .redeployignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  index.html  local.dev.txt  project.sh  pyproject.toml  sumd.json
.taskill/: state.json
examples/: manifest.md
examples/src/: api.py  models.py
inspector/: __init__.py  utils.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
swop/: __init__.py  cli.py  commands.py  config.py  core.py  graph.py  reconcile.py  sync.py  utils.py  versioning.py
swop/contracts/: __init__.py  adapter.py  reader.py
swop/cqrs/: __init__.py  decorators.py  registry.py
swop/export/: __init__.py  docker.py  yaml.py
swop/introspect/: __init__.py  backend.py  frontend.py
swop/manifests/: __init__.py  generator.py
swop/markpact/: __init__.py  doql_bridge.py  graph_builder.py  parser.py  spec_models.py  sync_engine.py
swop/proto/: __init__.py  compiler.py  generator.py
swop/refactor/: __init__.py  clustering.py  compose_builder.py  graph.py  module_builder.py  pipeline.py
swop/registry/: __init__.py  bridge.py  generator.py  loader.py  pydantic_cross_check.py  validator.py
swop/resolve/: __init__.py  resolver.py
swop/scan/: __init__.py  cache.py  render.py  report.py  scanner.py
swop/services/: __init__.py  generator.py
swop/tools/: __init__.py  doctor.py  doctor_deep.py  hook.py  init.py
swop/watch/: __init__.py  engine.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_cqrs.py  test_doctor_deep.py  test_hook.py  test_manifests.py  test_markpact.py  test_proto.py  test_pydantic_cross_check.py  test_refactor.py  test_resolve.py  test_scan.py  test_services.py  test_tools.py  test_watch.py
(+4 files in other folders)
